--- a/catalog.html
+++ b/catalog.html
@@ -114,14 +114,14 @@
             <fieldset class="catalog-filter-group">
               <legend class="catalog-filter-title">Стоимость, ₽:</legend>
                 <label class="control" >от
-                  <input class="control-input" type="number" name="min-price" value="0">
+                  <input class="control-input cost" type="number" name="min-price" value="0">
                 </label>
                 <label class="control">до
-                  <input class="control-input" type="number" name="max-price" value="9000">
+                  <input class="control-input cost" type="number" name="max-price" value="9000">
                 </label>
             </fieldset>
-            <button class="button-apply" type="submit">Применить</button>
-            <button class="button-reset" type="reset">Сбросить</button>
+            <button class="button-filter apply" type="submit">Применить</button>
+            <button class="button-filter reset" type="reset">Сбросить</button>
           </form>
         </section>
       </header>
