--- a/catalog.html
+++ b/catalog.html
@@ -114,10 +114,10 @@
             <fieldset class="catalog-filter-group">
               <legend class="catalog-filter-title">Стоимость, ₽:</legend>
                 <label class="control" >от
-                  <input class="control-input cost" type="number" name="min-price" value="0">
+                  <input class="control-input cost from" type="number" name="min-price" value="0">
                 </label>
                 <label class="control">до
-                  <input class="control-input cost" type="number" name="max-price" value="9000">
+                  <input class="control-input cost to" type="number" name="max-price" value="9000">
                 </label>
             </fieldset>
             <button class="button-filter apply" type="submit">Применить</button>
@@ -154,7 +154,7 @@
               <span class="product-type">Гостиница</span>
               <span class="product-price">От 4000 ₽</span>
               <a class="product-more" href="#">Подробнее</a>
-              <button class="product-favorites" type="button">В Избранное</button>
+              <button class="product-to-favorites" type="button">В Избранное</button>
               <p class="product-category star-4">
                 <span class="visually-hidden">Четыре звезды</span>
               </p>
@@ -169,7 +169,7 @@
               <span class="product-type">Гостиница</span>
               <span class="product-price">От 5000 ₽</span>
               <a class="product-more" href="#">Подробнее</a>
-              <button class="product-favorites" type="button">В Избранное</button>
+              <button class="product-in-favorites" type="button">В Избранном</button>
               <p class="product-category star-4">
                 <span class="visually-hidden">Четыре звезды</span>
               </p>
@@ -184,7 +184,7 @@
               <span class="product-type">Гостиница</span>
               <span class="product-price">От 2500 ₽</span>
               <a class="product-more" href="#">Подробнее</a>
-              <button class="product-favorites" type="button">В Избранное</button>
+              <button class="product-to-favorites" type="button">В Избранное</button>
               <p class="product-category star-3">
                 <span class="visually-hidden">Три звезды</span>
               </p>
@@ -199,7 +199,7 @@
               <span class="product-type">Гостиница</span>
               <span class="product-price">От 1500 ₽</span>
               <a class="product-more" href="#">Подробнее</a>
-              <button class="product-favorites" type="button">В Избранное</button>
+              <button class="product-to-favorites" type="button">В Избранное</button>
               <p class="product-category star-2">
                 <span class="visually-hidden">Две звезды</span>
               </p>
@@ -245,27 +245,27 @@
     </main>
 
     <footer class="page-footer">
-        <ul class="socials-list">
-          <li class="socials-item">
-            <a class="socials-link-vk" href="#">
-              <span class="visually-hidden">В Контакте</span>
-            </a>
-          </li>
-          <li class="socials-item">
-            <a class="socials-link-tg" href="#">
-              <span class="visually-hidden">Telegram</span>
-            </a>
-          </li>
-          <li class="socials-item">
-            <a class="socials-link-yt" href="#">
-              <span class="visually-hidden">Youtube</span>
-            </a>
-          </li>
-        </ul>
-        <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        <a class="copyright-logo" href="https://htmlacademy.ru/">
-          <span class="visually-hidden">Разработано htmlacademy.ru</span>
-        </a>
-      </footer>
+      <ul class="socials-list">
+        <li class="socials-item">
+          <a class="socials-link vk" href="#">
+            <span class="visually-hidden">В Контакте</span>
+          </a>
+        </li>
+        <li class="socials-item">
+          <a class="socials-link tg" href="#">
+            <span class="visually-hidden">Telegram</span>
+          </a>
+        </li>
+        <li class="socials-item">
+          <a class="socials-link yt" href="#">
+            <span class="visually-hidden">Youtube</span>
+          </a>
+        </li>
+      </ul>
+      <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a class="copyright-logo" href="https://htmlacademy.ru/">
+        <span class="visually-hidden">Разработано htmlacademy.ru</span>
+      </a>
+    </footer>
     </body>
   </html>
