--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-button" href="#">ХОЧУ СЮДА!</a>
+            <a class="navigation-button" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -52,34 +52,34 @@
         <h2 class="subtitle">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p class="description-subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantages-list">
-          <li class="advantages-item-picture">
-            <div class="description-element color-basic">
+          <li class="advantages-item-picture color-basic">
+            <div class="description-element">
               <h3 class="advantages-title">Настоящий городок</h3>
               <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
             <img class="advantage-image" src="images/advantages/real-town.jpg" width="800" height="385" alt="Вид на дом из сада">
           </li>
-          <li class="advantages-item">
-            <div class="description-element color-light">
+          <li class="advantages-item color-light">
+            <div class="description-element">
               <h3 class="advantages-title">Небольшая площадь</h3>
               <p class="advantages-description">Все достопримечательности находятся очень близко</p>
             </div>
           </li>
-          <li class="advantages-item">
-            <div class="description-element color-pale">
+          <li class="advantages-item color-pale">
+            <div class="description-element">
               <h3 class="advantages-title">Красивая дорога</h3>
               <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </div>
           </li>
-          <li class="advantages-item">
-            <div class="description-element color-light">
+          <li class="advantages-item color-light">
+            <div class="description-element">
               <h3 class="advantages-title">Мало туристов</h3>
               <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </div>
           </li>
-          <li class="advantages-item-picture">
+          <li class="advantages-item-picture color-basic">
             <img class="advantage-image" src="images/advantages/bridge-devil.jpg" width="800" height="385" alt="Вид на каньон">
-            <div class="description-element color-basic">
+            <div class="description-element">
               <h3 class="advantages-title">Там есть мост дьявола</h3>
               <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
@@ -91,8 +91,8 @@
         <h2 class="subtitle">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
         <p class="description-subtitle">Опытный персонал и качественное обслуживание!</p>
         <ul class="services-list">
-          <li class="services-item">
-            <div class="description-element color-light">
+          <li class="services-item color-light">
+            <div class="description-element">
               <h3 class="services-title">Жильё</h3>
               <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </div>
@@ -103,8 +103,8 @@
               <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </div>
           </li>
-          <li class="services-item">
-            <div class="description-element color-light">
+          <li class="services-item color-light">
+            <div class="description-element">
               <h3 class="services-title">Сувениры</h3>
               <p class="services-description">Не только китайского, но и настоящего местного производства!</p>
             </div>
