--- a/index.html
+++ b/index.html
@@ -7,22 +7,20 @@
   </head>
   <body>
     <div class="page-container">
-
-      <!--Шапка-->
       <header class="page-header">
-        <a class="logo" href="index.html">
+        <a class="logo" href="#">
           <img src="images/logo.svg" width="140" height="70" alt="Логотип">
         </a>
         <nav class="navigation">
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
+              <a class="navigation-link" href="index.html">Главная</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">О Седоне</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="catalog.html">Гостиницы</a>
+              <a class="navigation-link navigation-link-current" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
           <ul class="user-list">
@@ -38,7 +36,7 @@
               </a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-button" href="#">Хочу сюда!</a>
+              <a class="navigation-button" href="#">ХОЧУ СЮДА!</a>
             </li>
           </ul>
         </nav>
@@ -46,14 +44,12 @@
 
       <main class="main-container">
 
-        <!---->
         <section class="hero">
           <h1 class="visually-hidden">Курортный город Седона</h1>
           <img class="hero-title" src="images/hero/welcome.svg" width="458" height="352" alt="Welcome to the gorgerous Sedona, because Grand Canyon sucks!">
         </section>
 
-        <!---->
-        <!--<section class="advantages">
+        <section class="advantages">
           <h2 class="subtitle">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
           <p class="description-subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           <ul class="advantages-list">
@@ -133,10 +129,9 @@
             </label>
             <button class="subscribe-button" type="submit">Подписаться</button>
           </form>
-        </section>-->
+        </section>
       </main>
 
-      <!--Подвал-->
       <footer class="page-footer">
         <ul class="socials-list">
           <li class="socials-item">
