--- a/catalog.html
+++ b/catalog.html
@@ -121,90 +121,103 @@
                     <input class="control-input cost to" type="number" name="max-price" value="9000">
                   </label>
               </fieldset>
-              <button class="button-filter apply" type="submit">Применить</button>
-              <button class="button-filter reset" type="reset">Сбросить</button>
+
+              <div class="buttons-filter">
+                <button class="button-filter apply" type="submit">Применить</button>
+                <button class="button-filter reset" type="reset">Сбросить</button>
+              </div>
             </form>
           </section>
         </header>
 
         <section class="catalog-products">
-          <h2 class="subtitle">Найдено гостиниц: <span class="search-result">38</span></h2>
-          <select class="select-control" aria-label="Сортировка">
-            <option value="cheap">Сначала дешёвые</option>
-            <option value="expensive">Сначала дорогие</option>
-            <option value="popular">Сначала популярные</option>
-          </select>
-          <a href="#" class="button-show button-show-active">
-            <span class="visually-hidden">Показать карточки</span>
-          </a>
-          <a class="button-show" href="#">
-            <span class="visually-hidden">Показать слайды</span>
-          </a>
-          <a class="button-show" href="#">
-            <span class="visually-hidden">Показать список</span>
-          </a>
+          <div class="sorting">
+            <h2 class="subtitle">Найдено гостиниц: <span class="search-result">38</span></h2>
+            <select class="select-control" aria-label="Сортировка">
+              <option value="cheap">Сначала дешёвые</option>
+              <option value="expensive">Сначала дорогие</option>
+              <option value="popular">Сначала популярные</option>
+            </select>
+            <a href="#" class="button-show button-show-active">
+              <span class="visually-hidden">Показать карточки</span>
+            </a>
+            <a class="button-show" href="#">
+              <span class="visually-hidden">Показать слайды</span>
+            </a>
+            <a class="button-show" href="#">
+              <span class="visually-hidden">Показать список</span>
+            </a>
+          </div>
 
           <div class="product-cards">
             <ul class="product-list">
 
               <li class="product-item">
-                <a class="product-link" href="#">
-                  <h3 class="product-title">Amara Resort & Spa</h3>
-                  <img class="product-image" src="images/cards/amara.jpg" width="300" height="212" alt="Вид звездного неба из ущелья">
-                </a>
-                <span class="product-type">Гостиница</span>
-                <span class="product-price">От 4000 ₽</span>
-                <a class="product-more" href="#">Подробнее</a>
-                <button class="product-to-favorites" type="button">В Избранное</button>
-                <p class="product-category star-4">
-                  <span class="visually-hidden">Четыре звезды</span>
-                </p>
-                <p class="product-raiting">Рейтинг: <span class="product-raiting-value">8,5</span></p>
+                <div class="product-card">
+                  <a class="product-link" href="#">
+                    <h3 class="product-title">Amara Resort & Spa</h3>
+                    <img class="product-image" src="images/cards/amara.jpg" width="300" height="212" alt="Вид звездного неба из ущелья">
+                  </a>
+                  <span class="product-type">Гостиница</span>
+                  <span class="product-price">От 4000 ₽</span>
+                  <a class="product-more" href="#">Подробнее</a>
+                  <button class="product-to-favorites" type="button">В Избранное</button>
+                  <p class="product-category star-4">
+                    <span class="visually-hidden">Четыре звезды</span>
+                  </p>
+                  <p class="product-rating">Рейтинг: <span class="product-raiting-value">8,5</span></p>
+                </div>
               </li>
 
               <li class="product-item">
-                <a class="product-link" href="#">
-                  <h3 class="product-title">Villas at Poco Diablo</h3>
-                  <img class="product-image" src="images/cards/villas-diablo.jpg" width="300" height="212" alt="Вид на гору, пасмурное небо и радугу">
-                </a>
-                <span class="product-type">Гостиница</span>
-                <span class="product-price">От 5000 ₽</span>
-                <a class="product-more" href="#">Подробнее</a>
-                <button class="product-in-favorites" type="button">В Избранном</button>
-                <p class="product-category star-4">
-                  <span class="visually-hidden">Четыре звезды</span>
-                </p>
-                <p class="product-raiting">Рейтинг: <span class="product-raiting-value">9,2</span></p>
+                <div class="product-card">
+                  <a class="product-link" href="#">
+                    <h3 class="product-title">Villas at Poco Diablo</h3>
+                    <img class="product-image" src="images/cards/villas-diablo.jpg" width="300" height="212" alt="Вид на гору, пасмурное небо и радугу">
+                  </a>
+                  <span class="product-type">Гостиница</span>
+                  <span class="product-price">От 5000 ₽</span>
+                  <a class="product-more" href="#">Подробнее</a>
+                  <button class="product-in-favorites" type="button">В Избранном</button>
+                  <p class="product-category star-4">
+                    <span class="visually-hidden">Четыре звезды</span>
+                  </p>
+                  <p class="product-rating">Рейтинг: <span class="product-raiting-value">9,2</span></p>
+                </div>
               </li>
 
               <li class="product-item">
-                <a class="product-link" href="#">
-                  <h3 class="product-title">Desert Quail Inn</h3>
-                  <img class="product-image" src="images/cards/desert.jpg" width="300" height="212" alt="Вид на гору, ясная погода">
-                </a>
-                <span class="product-type">Гостиница</span>
-                <span class="product-price">От 2500 ₽</span>
-                <a class="product-more" href="#">Подробнее</a>
-                <button class="product-to-favorites" type="button">В Избранное</button>
-                <p class="product-category star-3">
-                  <span class="visually-hidden">Три звезды</span>
-                </p>
-                <p class="product-raiting">Рейтинг: <span class="product-raiting-value">6,9</span></p>
+                <div class="product-card">
+                  <a class="product-link" href="#">
+                    <h3 class="product-title">Desert Quail Inn</h3>
+                    <img class="product-image" src="images/cards/desert.jpg" width="300" height="212" alt="Вид на гору, ясная погода">
+                  </a>
+                  <span class="product-type">Гостиница</span>
+                  <span class="product-price">От 2500 ₽</span>
+                  <a class="product-more" href="#">Подробнее</a>
+                  <button class="product-to-favorites" type="button">В Избранное</button>
+                  <p class="product-category star-3">
+                    <span class="visually-hidden">Три звезды</span>
+                  </p>
+                  <p class="product-rating">Рейтинг: <span class="product-raiting-value">6,9</span></p>
+                </div>
               </li>
 
               <li class="product-item">
-                <a class="product-link" href="#">
-                  <h3 class="product-title">GreenTree Inn</h3>
-                  <img class="product-image" src="images/cards/green-tree.jpg" width="300" height="212" alt="Вид на гору ночью">
-                </a>
-                <span class="product-type">Гостиница</span>
-                <span class="product-price">От 1500 ₽</span>
-                <a class="product-more" href="#">Подробнее</a>
-                <button class="product-to-favorites" type="button">В Избранное</button>
-                <p class="product-category star-2">
-                  <span class="visually-hidden">Две звезды</span>
-                </p>
-                <p class="product-raiting">Рейтинг: <span class="product-raiting-value">5,0</span></p>
+                <div class="product-card">
+                  <a class="product-link" href="#">
+                    <h3 class="product-title">GreenTree Inn</h3>
+                    <img class="product-image" src="images/cards/green-tree.jpg" width="300" height="212" alt="Вид на гору ночью">
+                  </a>
+                  <span class="product-type">Гостиница</span>
+                  <span class="product-price">От 1500 ₽</span>
+                  <a class="product-more" href="#">Подробнее</a>
+                  <button class="product-to-favorites" type="button">В Избранное</button>
+                  <p class="product-category star-2">
+                    <span class="visually-hidden">Две звезды</span>
+                  </p>
+                  <p class="product-rating">Рейтинг: <span class="product-raiting-value">5,0</span></p>
+                </div>
               </li>
 
             </ul>
