--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <div class="page-container">
       <header class="page-header">
-        <a class="logo" href="#">
-          <img src="images/logo.svg" width="140" height="70" alt="Логотип">
-        </a>
         <nav class="navigation">
+          <a class="logo" href="#">
+            <img src="images/logo.svg" width="140" height="70" alt="Логотип">
+          </a>
           <ul class="navigation-list">
             <li class="navigation-item">
               <a class="navigation-link" href="index.html">Главная</a>
@@ -35,8 +35,8 @@
                 <span class="user-favorites-num">12</span>
               </a>
             </li>
-            <li class="navigation-item">
-              <a class="navigation-button" href="#">ХОЧУ СЮДА!</a>
+            <li class="user-item-button">
+              <a class="user-button" href="#">ХОЧУ СЮДА!</a>
             </li>
           </ul>
         </nav>
