--- a/catalog.html
+++ b/catalog.html
@@ -8,10 +8,10 @@
   <body>
     <div class="page-container">
       <header class="page-header">
-        <a class="logo" href="#">
-          <img src="images/logo.svg" width="140" height="70" alt="Логотип">
-        </a>
         <nav class="navigation">
+          <a class="logo" href="#">
+            <img src="images/logo.svg" width="140" height="70" alt="Логотип">
+          </a>
           <ul class="navigation-list">
             <li class="navigation-item">
               <a class="navigation-link" href="index.html">Главная</a>
@@ -35,8 +35,8 @@
                 <span class="user-favorites-num">12</span>
               </a>
             </li>
-            <li class="navigation-item">
-              <a class="navigation-button" href="#">ХОЧУ СЮДА!</a>
+            <li class="user-item-button">
+              <a class="user-button" href="#">ХОЧУ СЮДА!</a>
             </li>
           </ul>
         </nav>
@@ -153,71 +153,79 @@
             <ul class="product-list">
 
               <li class="product-item">
-                <div class="product-card">
-                  <a class="product-link" href="#">
-                    <h3 class="product-title">Amara Resort & Spa</h3>
-                    <img class="product-image" src="images/cards/amara.jpg" width="300" height="212" alt="Вид звездного неба из ущелья">
-                  </a>
+                <a class="product-link" href="#">
+                  <h3 class="product-title">Amara Resort & Spa</h3>
+                  <img class="product-image" src="images/cards/amara.jpg" width="300" height="212" alt="Вид звездного неба из ущелья">
+                </a>
+                <p class="">
                   <span class="product-type">Гостиница</span>
                   <span class="product-price">От 4000 ₽</span>
+                </p>
+                <p class="">
                   <a class="product-more" href="#">Подробнее</a>
                   <button class="product-to-favorites" type="button">В Избранное</button>
-                  <p class="product-category star-4">
-                    <span class="visually-hidden">Четыре звезды</span>
-                  </p>
-                  <p class="product-rating">Рейтинг: <span class="product-raiting-value">8,5</span></p>
-                </div>
+                </p>
+                <p class="product-category star-4">
+                  <span class="visually-hidden">Четыре звезды</span>
+                  <span class="product-rating">Рейтинг: <span class="product-raiting-value">8,5</span></span>
+                </p>
               </li>
 
               <li class="product-item">
-                <div class="product-card">
-                  <a class="product-link" href="#">
-                    <h3 class="product-title">Villas at Poco Diablo</h3>
-                    <img class="product-image" src="images/cards/villas-diablo.jpg" width="300" height="212" alt="Вид на гору, пасмурное небо и радугу">
-                  </a>
+                <a class="product-link" href="#">
+                  <h3 class="product-title">Villas at Poco Diablo</h3>
+                  <img class="product-image" src="images/cards/villas-diablo.jpg" width="300" height="212" alt="Вид на гору, пасмурное небо и радугу">
+                </a>
+                <p>
                   <span class="product-type">Гостиница</span>
                   <span class="product-price">От 5000 ₽</span>
+                </p>
+                <p>
                   <a class="product-more" href="#">Подробнее</a>
                   <button class="product-in-favorites" type="button">В Избранном</button>
-                  <p class="product-category star-4">
-                    <span class="visually-hidden">Четыре звезды</span>
-                  </p>
-                  <p class="product-rating">Рейтинг: <span class="product-raiting-value">9,2</span></p>
-                </div>
+                </p>
+                <p class="product-category star-4">
+                  <span class="visually-hidden">Четыре звезды</span>
+                  <span class="product-rating">Рейтинг: <span class="product-raiting-value">9,2</span></span>
+                </p>
               </li>
 
               <li class="product-item">
-                <div class="product-card">
-                  <a class="product-link" href="#">
-                    <h3 class="product-title">Desert Quail Inn</h3>
-                    <img class="product-image" src="images/cards/desert.jpg" width="300" height="212" alt="Вид на гору, ясная погода">
-                  </a>
+                <a class="product-link" href="#">
+                  <h3 class="product-title">Desert Quail Inn</h3>
+                  <img class="product-image" src="images/cards/desert.jpg" width="300" height="212" alt="Вид на гору, ясная погода">
+                </a>
+                <p class="">
                   <span class="product-type">Гостиница</span>
                   <span class="product-price">От 2500 ₽</span>
+                </p>
+                <p class="">
                   <a class="product-more" href="#">Подробнее</a>
                   <button class="product-to-favorites" type="button">В Избранное</button>
-                  <p class="product-category star-3">
+                </p>
+                <p class="product-category star-3">
                     <span class="visually-hidden">Три звезды</span>
-                  </p>
-                  <p class="product-rating">Рейтинг: <span class="product-raiting-value">6,9</span></p>
-                </div>
+                    <span class="product-rating">Рейтинг: <span class="product-raiting-value">6,9</span></span>
+                </p>
               </li>
 
               <li class="product-item">
-                <div class="product-card">
-                  <a class="product-link" href="#">
-                    <h3 class="product-title">GreenTree Inn</h3>
-                    <img class="product-image" src="images/cards/green-tree.jpg" width="300" height="212" alt="Вид на гору ночью">
-                  </a>
+                <a class="product-link" href="#">
+                  <h3 class="product-title">GreenTree Inn</h3>
+                  <img class="product-image" src="images/cards/green-tree.jpg" width="300" height="212" alt="Вид на гору ночью">
+                </a>
+                <p class="">
                   <span class="product-type">Гостиница</span>
                   <span class="product-price">От 1500 ₽</span>
+                </p>
+                <p class="">
                   <a class="product-more" href="#">Подробнее</a>
                   <button class="product-to-favorites" type="button">В Избранное</button>
-                  <p class="product-category star-2">
-                    <span class="visually-hidden">Две звезды</span>
-                  </p>
-                  <p class="product-rating">Рейтинг: <span class="product-raiting-value">5,0</span></p>
-                </div>
+                </p>
+                <p class="product-category star-2">
+                  <span class="visually-hidden">Две звезды</span>
+                  <span class="product-rating">Рейтинг: <span class="product-raiting-value">5,0</span></span>
+                </p>
               </li>
 
             </ul>
