--- a/catalog.html
+++ b/catalog.html
@@ -122,9 +122,9 @@
                   </label>
               </fieldset>
 
-              <div class="buttons-filter">
-                <button class="button-filter apply" type="submit">Применить</button>
-                <button class="button-filter reset" type="reset">Сбросить</button>
+              <div class="filter-buttons">
+                <button class="filter-button apply" type="submit">Применить</button>
+                <button class="filter-button reset" type="reset">Сбросить</button>
               </div>
             </form>
           </section>
@@ -157,11 +157,11 @@
                   <h3 class="product-title">Amara Resort & Spa</h3>
                   <img class="product-image" src="images/cards/amara.jpg" width="300" height="212" alt="Вид звездного неба из ущелья">
                 </a>
-                <p class="">
+                <p class="product-type-price">
                   <span class="product-type">Гостиница</span>
                   <span class="product-price">От 4000 ₽</span>
                 </p>
-                <p class="">
+                <p class="product-buttons">
                   <a class="product-more" href="#">Подробнее</a>
                   <button class="product-to-favorites" type="button">В Избранное</button>
                 </p>
@@ -176,11 +176,11 @@
                   <h3 class="product-title">Villas at Poco Diablo</h3>
                   <img class="product-image" src="images/cards/villas-diablo.jpg" width="300" height="212" alt="Вид на гору, пасмурное небо и радугу">
                 </a>
-                <p>
+                <p class="product-type-price">
                   <span class="product-type">Гостиница</span>
                   <span class="product-price">От 5000 ₽</span>
                 </p>
-                <p>
+                <p class="product-buttons">
                   <a class="product-more" href="#">Подробнее</a>
                   <button class="product-in-favorites" type="button">В Избранном</button>
                 </p>
@@ -195,11 +195,11 @@
                   <h3 class="product-title">Desert Quail Inn</h3>
                   <img class="product-image" src="images/cards/desert.jpg" width="300" height="212" alt="Вид на гору, ясная погода">
                 </a>
-                <p class="">
+                <p class="product-type-price">
                   <span class="product-type">Гостиница</span>
                   <span class="product-price">От 2500 ₽</span>
                 </p>
-                <p class="">
+                <p class="product-buttons">
                   <a class="product-more" href="#">Подробнее</a>
                   <button class="product-to-favorites" type="button">В Избранное</button>
                 </p>
@@ -214,11 +214,11 @@
                   <h3 class="product-title">GreenTree Inn</h3>
                   <img class="product-image" src="images/cards/green-tree.jpg" width="300" height="212" alt="Вид на гору ночью">
                 </a>
-                <p class="">
+                <p class="product-type-price">
                   <span class="product-type">Гостиница</span>
                   <span class="product-price">От 1500 ₽</span>
                 </p>
-                <p class="">
+                <p class="product-buttons">
                   <a class="product-more" href="#">Подробнее</a>
                   <button class="product-to-favorites" type="button">В Избранное</button>
                 </p>
