--- a/index.html
+++ b/index.html
@@ -114,10 +114,11 @@
         </section>
 
         <section class="interested">
-          <h2 class="subtitle interested-subtitle">Заинтересовались?</h2>
-          <p class="description-subtitle interested-description-subtitle">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-
-          <a class="interested-button" href="#">Поиск гостиницы в Cедоне</a>
+          <div class="interested-wrapper">
+            <h2 class="subtitle interested-subtitle">Заинтересовались?</h2>
+            <p class="description-subtitle interested-description-subtitle">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <a class="interested-button" href="#">Поиск гостиницы в Cедоне</a>
+          </div>
         </section>
 
         <section class="subscribe subscribe-bg">
